# music_notation

./: .gitignore  Cargo.toml  README.md  bravura_metadata.h  build.bat  build.rs  code_gen.c  declarations.h  music_notation.c  shared_declarations.h
content/: content.c  content.h  memory.c  rational.c
content/duration/: duration.c  duration.h
content/memory/: memory.c  memory.h
content/rational/: rational.c  rational.h
display/: display.c  display.h  viewport.c
display/respace_slices/: respace_slices.c  respace_slices.h
display/viewport/: viewport.c  viewport.h
gui/: clef_tab.c  gui.c  gui.h  staff_tab.c
gui/clef_tab/: clef_tab.c  clef_tab.h
gui/staff_tab/: staff_tab.c  staff_tab.h
gui/staff_tab/edit_staff_scales_dialog/: edit_staff_scales_dialog.c  edit_staff_scales_dialog.h
src/: constants.rs  main.rs  safe_windows.rs  shared.rs
